--- a/campanhas-publicitarias.html
+++ b/campanhas-publicitarias.html
@@ -2,7 +2,7 @@
 <html>
     
     <head>
-        <title>Anna Bella Oficial</title>
+        <title>Anna Bella Oficial - Campanhas Publicitárias</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="/src/css/estilos.css">
     </head>
@@ -21,19 +21,25 @@
         </div>
 
         <div id="conteudo">
-            <h1>Sobre Anna Bella</h1>
+            <h1>Campanhas Publicitárias</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis tincidunt imperdiet sapien, ac fringilla est iaculis nec. 
-                Vestibulum a varius orci. Integer fermentum sagittis ante vitae rhoncus. Etiam arcu ante, dapibus vel diam eu, fermentum malesuada purus. 
+                Vestibulum a varius orci. Integer fermentum sagittis ante vitae rhoncus. Etiam arcu ante, dapibus vel diam eu, fermentum malesuada purus.
+            </p>
+            <img src="./src/imagens/foto1.png" class="img-campanha">
+            <p>
                 Etiam mattis elit vitae auctor rutrum. Pellentesque odio elit, porttitor sed hendrerit id, maximus nec elit. Duis vehicula lectus at suscipit lacinia. 
                 Vestibulum quis fermentum libero. Mauris volutpat ullamcorper est, quis pellentesque massa porttitor vitae. Phasellus a tristique lorem.
             </p>
-
+            <img src="./src/imagens/foto2.png" class="img-campanha">
             <p>
                 Nullam a augue porta, gravida elit sit amet, congue erat. Vestibulum fermentum placerat velit, eget euismod odio eleifend vel. 
                 Nunc hendrerit, lectus consectetur tincidunt sollicitudin, mauris purus sollicitudin est, quis lacinia metus velit vehicula lectus. 
                 Suspendisse at bibendum eros, interdum dictum sem. Quisque odio diam, pretium a sapien vel, porta ultrices dolor. Cras neque magna, cursus a semper vel, ultricies ut quam. 
-                Mauris maximus purus eros, consectetur ultricies felis aliquet eget. 
+                Mauris maximus purus eros, consectetur ultricies felis aliquet eget.
+            </p>
+            <img src="./src/imagens/foto3.png" class="img-campanha">
+            <p> 
                 Nunc quis fermentum ante, ac pellentesque metus. Donec pulvinar ipsum in nisi hendrerit, quis mollis est luctus. Integer tellus dolor, ullamcorper vel dolor eu, efficitur malesuada ligula. 
             </p>
         </div>
